
Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11
* Require carrier to quote sale with shipment cost method

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.4.0 - 2022-05-02
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
* Bug fixes (see mercurial logs for details)
* Define default shipment cost method by party
* Add cost method to shipment

Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Allow to add a sale shipment line with cost 0
* Add unsold shipment cost to the outgoing moves
* Simplify manual alteration of shipment cost
* Use purchase carrier price as cost for shipment
* Allow shipment costs to not be sold
* Add carrier on shipment list view
* Exclude by default shipment cost from promotion amount
* Allow shipment cost price to be edited

Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Compute shipment cost without creating a line

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7
* Invoice shipment cost with cost method on order and invoice method on
  shipment when at least one shipment is done.

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Do not compute shipment cost when not shipping goods