@@ -7,8 +7,9 @@ from trytond.pool import PoolMeta
 class InvoiceLine(metaclass=PoolMeta):
     __name__ = 'account.invoice.line'
 
-    cost_shipments = fields.One2Many(
-        'stock.shipment.out', 'cost_invoice_line', "Cost of Shipments",
+    cost_sale_shipments = fields.One2Many(
+        'stock.shipment.out', 'cost_sale_invoice_line',
+        "Cost Sale of Shipments",
         readonly=True)
 
     @classmethod
