@@ -24,7 +24,7 @@ class SaleShipmentCostTestCase(ModuleTestCase):
 
         fields = sale._get_shipment_grouping_fields(shipment)
 
-        self.assertLessEqual({'cost_method', 'carrier'}, fields)
+        self.assertLessEqual({'cost_sale_method', 'carrier'}, fields)
         self.assertLessEqual(fields, ShipmentOut._fields.keys())
 
 
