@@ -1,3 +1,4 @@
+* Add sale prefix to all fields
 
 Version 7.2.0 - 2024-04-29
 --------------------------
